# RecNet-Client

./: .env.secret  Example.py  README.md  docker-compose.yml  pyproject.toml
src/recnetclient/: __init__.py  exceptions.py  fsclient.py  recnetlogin.py
src/recnetclient/APIs/: Accounts.py  Images.py  Match.py  __init__.py
