[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "recnetclient"
version = "0.1.2"
authors = [
    {name="Zigzatuzoo"},
    {name="Jegarde"}
]
description = "RecNetClient is a Python library that allows you to acquire your RecNet access token, make API Calls, and more!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyJWT==2.7.0",
    "httpx==0.24.1",
    "python-dotenv==1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Zigzatuzoo/RecNet-Client"
"Bug Tracker" = "https://github.com/Zigzatuzoo/RecNet-Client/issues"